// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the connected Sidebar component with reduxInitialState should render with given state from Redux store 1`] = `
.c4.c4 {
  background-color: #fff;
  font-size: 1.4rem;
  line-height: 2;
  padding: 0 1.2rem;
  display: block;
  border-radius: 3px;
  border: 1px solid;
}

.c4.c4.c4.c4:hover:before,
.c4.c4:before {
  border: 0px;
}

.c4.c4 .MuiSelect-select:focus {
  background-color: transparent;
}

.c3 {
  margin: 2.4rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

.c6 {
  padding: 1.3rem;
}

.c6.reported-cases-wrapper {
  border-bottom: 1px solid #ccc;
}

.c7 {
  margin: 0.6rem 0;
}

.c8 {
  margin-bottom: 0.3rem;
}

.c9 {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  margin-bottom: -0.3rem;
  margin-right: 0.8em;
}

.c10 {
  display: inline-block;
  font-size: 1.8em;
}

.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  width: calc( - 3.2rem);
  padding: 2.4rem 1.6rem;
  overflow: auto;
  z-index: 2;
}

.c2 select {
  color: #fff;
  background-color: #e43b46;
}

.c2 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

.c5 {
  position: relative;
  padding: 0.2em 1.5em;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #000;
  border-radius: 2px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
}

.c5:focus,
.c5.focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.c5:active,
.c5.is-active {
  color: #fff;
  background-color: #000;
  background-image: none;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:disabled {
  cursor: auto;
  opacity: 0.65;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot CountrySelect-inputRoot-1 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value=""
          />
          <div
            className="MuiAutocomplete-endAdornment"
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-3"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      className="c3"
    >
      outbreak
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline c4"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-outbreak"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="mui-component-select-outbreak"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Ebola Outbreak
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="outbreak"
        onAnimationStart={[Function]}
        onChange={[Function]}
        tabIndex={-1}
        value="Ebola Outbreak"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <button
    className="c5"
    onClick={[Function]}
  >
    Oct 1, 2014
     -
     
    Feb 20, 2016
  </button>
  <div
    className="c6 reported-cases-wrapper"
  >
    <p>
      <strong>
        Reported cases
         from:
        <br />
        Wed Oct 01 2014
         to
         
        Sat Feb 20 2016
      </strong>
    </p>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        Suspected and confirmed
      </div>
      <div
        className="c9"
        style={
          Object {
            "backgroundColor": "#4D73CE",
          }
        }
      />
      <div
        className="c10"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="c6"
  >
    <h4>
      SUMMARY
    </h4>
    <p>
      From 
      Wed Oct 01 2014
       to 
      Sat Feb 20 2016
      , the Ebola outbreak in 
      West Africa
       
      has affected
       
      0
       people
       (suspected and confirmed cases)
      .
    </p>
  </div>
</div>
`;

exports[`Tests for the connected Sidebar component with riskViewState should render with given state from Redux store 1`] = `
.c4.c4 {
  background-color: #fff;
  font-size: 1.4rem;
  line-height: 2;
  padding: 0 1.2rem;
  display: block;
  border-radius: 3px;
  border: 1px solid;
}

.c4.c4.c4.c4:hover:before,
.c4.c4:before {
  border: 0px;
}

.c4.c4 .MuiSelect-select:focus {
  background-color: transparent;
}

.c3 {
  margin: 2.4rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

.c6 {
  padding: 1.3rem;
}

.c6.reported-cases-wrapper {
  border-bottom: 1px solid #ccc;
}

.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  width: calc( - 3.2rem);
  padding: 2.4rem 1.6rem;
  overflow: auto;
  z-index: 2;
}

.c2 select {
  color: #fff;
  background-color: #e43b46;
}

.c2 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

.c5 {
  position: relative;
  padding: 0.2em 1.5em;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #000;
  border-radius: 2px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
}

.c5:focus,
.c5.focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
}

.c5:active,
.c5.is-active {
  color: #fff;
  background-color: #000;
  background-image: none;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:disabled {
  cursor: auto;
  opacity: 0.65;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot CountrySelect-inputRoot-1 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value="All"
          />
          <div
            className="MuiAutocomplete-endAdornment"
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-3"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <label
      className="c3"
    >
      outbreak
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline c4"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-outbreak"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="mui-component-select-outbreak"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Ebola Outbreak
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="outbreak"
        onAnimationStart={[Function]}
        onChange={[Function]}
        tabIndex={-1}
        value="Ebola Outbreak"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <button
    className="c5"
    onClick={[Function]}
  >
    Oct 1, 2014
     -
     
    Feb 20, 2016
  </button>
  <div
    className="c6"
  >
    <h4>
      SUMMARY
    </h4>
    <p>
      From 
      Wed Oct 01 2014
       to 
      Sat Feb 20 2016
      , the Ebola outbreak in 
      West Africa
       
      has affected
       
      0
       people
       (suspected and confirmed cases)
      .
    </p>
  </div>
  <div
    className="c6"
  >
    <strong>
      <p>
        The top 10 countries with the highest relative risk of Ebola spread are:
      </p>
    </strong>
    <ol>
      <li>
        Guinea
      </li>
      <li>
        Nigeria
      </li>
      <li>
        Ivory Coast
      </li>
      <li>
        Sierra Leone
      </li>
      <li>
        Mali
      </li>
      <li>
        Liberia
      </li>
      <li>
        Senegal
      </li>
      <li>
        Ghana
      </li>
      <li>
        Burkina Faso
      </li>
      <li>
        Democratic Republic of the Congo
      </li>
    </ol>
  </div>
</div>
`;
